Fix METAR font size on mobile

--- a/web/src/AirportWeather.css
+++ b/web/src/AirportWeather.css
@@ -23,3 +23,9 @@
     padding-left: 6px;
     padding-bottom: 3px;
 }
+
+@media (max-width: 500px) {
+    .metar {
+        font-size: 8pt;
+    }
+}
